# sagemaker-docker

./: README.md  pyproject.toml  scikit_bring_your_own.ipynb
container/: Dockerfile  build_and_push.sh
container/decision_trees/: predictor.py  train
container/local_test/test_dir/model/: decision-tree-model.pkl
