[tool.poetry]
name = "sagemaker-docker"
version = "0.1.0"
description = ""
authors = ["Ernane Sena <ernane.sena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
